src/tests/fixtures/typename/PropertyTypenameDoesNotMatchClassName.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class User {
  __typename = "Group" as const;
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/typename/PropertyTypenameDoesNotMatchClassName.ts:3:16 - error: Expected `__typename` property initializer to be `"User"`, found `"Group"`. This is needed to ensure Grats can determine the type of this object during GraphQL execution.

3   __typename = "Group" as const;
                 ~~~~~~~


-- Code Action: "Create Grats-compatible `__typename` property" (fix-typename-property) --
- Original
+ Fixed

@@ -2,3 +2,3 @@
  export class User {
-   __typename = "Group" as const;
+   __typename = "User" as const;
    /** @gqlField */